--- a/index.html
+++ b/index.html
@@ -4,22 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>自主學習-分析儀表板</title>
 </head>
 
 <body>
-    <div class='tableauPlaceholder' id='viz1706020717584' style='position: relative'><noscript><a href='#'><img
-                    alt='本文 1 '
-                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;-_&#47;-_17059994752910&#47;1&#47;1_rss.png'
+    <div class='tableauPlaceholder' id='viz1706022549102' style='position: relative'><noscript><a href='#'><img
+                    alt='儀表板窗格 1 '
+                    src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;-_&#47;-_17059994752910&#47;1_1&#47;1_rss.png'
                     style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
             <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
             <param name='embed_code_version' value='3' />
             <param name='site_root' value='' />
-            <param name='name' value='-_17059994752910&#47;1' />
+            <param name='name' value='-_17059994752910&#47;1_1' />
             <param name='tabs' value='no' />
             <param name='toolbar' value='yes' />
             <param name='static_image'
-                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;-_&#47;-_17059994752910&#47;1&#47;1.png' />
+                value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;-_&#47;-_17059994752910&#47;1_1&#47;1.png' />
             <param name='animate_transition' value='yes' />
             <param name='display_static_image' value='yes' />
             <param name='display_spinner' value='yes' />
@@ -28,7 +28,7 @@
             <param name='language' value='zh-TW' />
         </object></div>
     <script
-        type='text/javascript'>                    var divElement = document.getElementById('viz1706020717584'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '1920px'; vizElement.style.height = '1107px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+        type='text/javascript'>                    var divElement = document.getElementById('viz1706022549102'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1920px'; vizElement.style.height = '1107px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '1920px'; vizElement.style.height = '1107px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1977px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 </body>
 
 </html>
